WIP: Replace use of String.format()
Upgraded modernizer is pointing out violations: fix that up.

Change-Id: Icb9140965c5e838758c20708cc700e5c64a82f9c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>